--- a/html/BigWork1.html
+++ b/html/BigWork1.html
@@ -106,9 +106,9 @@
 					<div class="zi4">
 						<div class="huazhuangpin">
 							<span class="text18">化妆品净含量</span>
-							<div class="wu">150<img src="../img/duigou.png" class="duigou">
+							<div class="wu">150ml<img src="../img/duigou.png" class="duigou">
 							</div>
-							<div class="er">200<img src="../img/duigou.png" class="duigou" style="opacity: 0">
+							<div class="er">200ml<img src="../img/duigou.png" class="duigou" style="opacity: 0">
 							</div>
 						</div>
 						<div class="shuliang">
