--- a/html/BigWork.html
+++ b/html/BigWork.html
@@ -62,7 +62,9 @@
 				<li>品牌货栈</li>
 				<li>韩国馆</li>
 				<li>帮社区</li>
-				<li>1元兑奖</li>
+				<li class="yiyuan">
+					<img src="../img/hot.gif" alt="" class="hot">1元兑奖
+				</li>
 			</ul>	
 		</div>
 	</div>
