--- a/html/BigWork.html
+++ b/html/BigWork.html
@@ -268,11 +268,11 @@
 					<input type="text" name="" placeholder="请输入手机号" class="input2">
 					<select class="input3">
 						<option>10</option>
-						<option>30</option>
+						<option selected="selected">30</option>
 						<option>50</option>
 						<option>100</option>
 					</select>
-					<span class="money">￥10</span>
+					<span class="money">￥30</span>
 					<input type="button" name="" class="button2" value="充值">
 				</div>
 			</div>
